@@ -1,11 +1,16 @@
 Build.PL
-META.yml
-Makefile.PL
 Changes
 lib/URI/Title.pm
+lib/URI/Title/HTML.pm
+lib/URI/Title/Image.pm
+lib/URI/Title/MP3.pm
+lib/URI/Title/PDF.pm
+Makefile.PL
 MANIFEST
+META.yml
 NINJA
 t/00bootstrap.t
 t/failure.t
 t/html.t
+t/other.t
 title.pl
