@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name: URI-Title
-version: 1
+version: 1.50
 author: ~
 abstract: |-
   get the titles of things on the web in a sensible way
@@ -15,5 +15,13 @@ requires:
 provides:
   URI::Title:
     file: lib/URI/Title.pm
-    version: 1
+    version: 1.50
+  URI::Title::HTML:
+    file: lib/URI/Title/HTML.pm
+  URI::Title::Image:
+    file: lib/URI/Title/Image.pm
+  URI::Title::MP3:
+    file: lib/URI/Title/MP3.pm
+  URI::Title::PDF:
+    file: lib/URI/Title/PDF.pm
 generated_by: Module::Build version 0.25
