@@ -1,3 +1,8 @@
+2004-09-23  Tom Insam  <tom@jerakeen.org>
+
+  * Added limited character set support. It mostly sucks, but
+    less than it did before.
+    
 2004-08-13  Tom Insam  <tom@jerakeen.org>
 
   * Added quick special case for iTMS urls.
